--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <section>
+    <section id="landing">
       <nav>
         <div class="nav__container">
           <img class="logo" src="./assets/Library.svg" alt="" />
@@ -19,8 +19,22 @@
           </ul>
         </div>
       </nav>
-
-      <header></header>
+      <header>
+        <div class="header__container">
+          <div class="header__description">
+            <h1 class="header__title purple">
+              America's most awarded online library platform
+            </h1>
+            <h2 class="header__subtitle">
+              Find your dream book with <span class="purple">Library</span>
+            </h2>
+            <button class="btn">Browse Books</button>
+          </div>
+          <figure class="header__img--wrapper">
+            <img src="./assets/Undraw_Books.svg" alt="" class="header__img" />
+          </figure>
+        </div>
+      </header>
     </section>
   </body>
 </html>
