--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="container">
           <div class="row">
             <h2 class="section__title">
-              Features <span class="purple">Books</span>
+              Featured <span class="purple">Books</span>
             </h2>
             <div class="books">
               <div class="book">
@@ -106,6 +106,66 @@
                 </div>
                 <div class="book__price">
                   <span class="book__price--normal">$59.95</span> $14.95
+                </div>
+              </div>
+              <div class="book">
+                <figure class="book__img--wrapper">
+                  <img
+                    src="./assets/atomic habits.jpg"
+                    alt=""
+                    class="book__img"
+                  />
+                </figure>
+                <div class="book__title">Atomic Habits</div>
+                <div class="book__ratings">
+                  <i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star-half-stroke"></i>
+                </div>
+                <div class="book__price">
+                  <span class="book__price--normal">$39.95</span> $12.95
+                </div>
+              </div>
+              <div class="book">
+                <figure class="book__img--wrapper">
+                  <img
+                    src="./assets/david goggins.jpeg"
+                    alt=""
+                    class="book__img"
+                  />
+                </figure>
+                <div class="book__title">Can't Hurt Me</div>
+                <div class="book__ratings">
+                  <i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star-half-stroke"></i>
+                </div>
+                <div class="book__price">
+                  $28.95
+                </div>
+              </div>
+              <div class="book">
+                <figure class="book__img--wrapper">
+                  <img
+                    src="./assets/deep work.jpeg"
+                    alt=""
+                    class="book__img"
+                  />
+                </figure>
+                <div class="book__title">Deep Work</div>
+                <div class="book__ratings">
+                  <i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star-half-stroke"></i>
+                </div>
+                <div class="book__price">
+                  $22.95
                 </div>
               </div>
             </div>
