--- a/index.html
+++ b/index.html
@@ -144,17 +144,11 @@
                   ><i class="fa-solid fa-star"></i>
                   <i class="fa-solid fa-star-half-stroke"></i>
                 </div>
-                <div class="book__price">
-                  $28.95
-                </div>
+                <div class="book__price">$28.95</div>
               </div>
               <div class="book">
                 <figure class="book__img--wrapper">
-                  <img
-                    src="./assets/deep work.jpeg"
-                    alt=""
-                    class="book__img"
-                  />
+                  <img src="./assets/deep work.jpeg" alt="" class="book__img" />
                 </figure>
                 <div class="book__title">Deep Work</div>
                 <div class="book__ratings">
@@ -164,9 +158,7 @@
                   ><i class="fa-solid fa-star"></i>
                   <i class="fa-solid fa-star-half-stroke"></i>
                 </div>
-                <div class="book__price">
-                  $22.95
-                </div>
+                <div class="book__price">$22.95</div>
               </div>
             </div>
           </div>
@@ -175,7 +167,128 @@
 
       <section id="recent">
         <div class="container">
-          <div class="row"></div>
+          <div class="row">
+            <h2 class="section__title">
+              Latest <span class="purple">Books</span>
+            </h2>
+            <div class="books">
+              <div class="book">
+                <figure class="book__img--wrapper">
+                  <img src="./assets/book-1.jpeg" alt="" class="book__img" />
+                </figure>
+                <div class="book__title">The 10X Rule</div>
+                <div class="book__ratings">
+                  <i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star-half-stroke"></i>
+                </div>
+                <div class="book__price">$59.95</div>
+              </div>
+              <div class="book">
+                <figure class="book__img--wrapper">
+                  <img src="./assets/book-2.jpeg" alt="" class="book__img" />
+                </figure>
+                <div class="book__title">Be Obssessed Or Be Average</div>
+                <div class="book__ratings">
+                  <i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star-half-stroke"></i>
+                </div>
+                <div class="book__price">
+                  <span class="book__price--normal">$39.95</span> $22.95
+                </div>
+              </div>
+              <div class="book">
+                <figure class="book__img--wrapper">
+                  <img src="./assets/book-3.jpeg" alt="" class="book__img" />
+                </figure>
+                <div class="book__title">Rich Dad Poor Dad</div>
+                <div class="book__ratings">
+                  <i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i>
+                </div>
+                <div class="book__price">$48.95</div>
+              </div>
+              <div class="book">
+                <figure class="book__img--wrapper">
+                  <img src="./assets/book-4.jpeg" alt="" class="book__img" />
+                </figure>
+                <div class="book__title">Cashflow Quadrant</div>
+                <div class="book__ratings">
+                  <i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star-half-stroke"></i>
+                </div>
+                <div class="book__price">$22.95</div>
+              </div>
+              <div class="book">
+                <figure class="book__img--wrapper">
+                  <img src="./assets/book-5.jpeg" alt="" class="book__img" />
+                </figure>
+                <div class="book__title">48 Laws of Power</div>
+                <div class="book__ratings">
+                  <i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star-half-stroke"></i>
+                </div>
+                <div class="book__price">
+                  <span class="book__price--normal">$59.95</span> $14.95
+                </div>
+              </div>
+              <div class="book">
+                <figure class="book__img--wrapper">
+                  <img src="./assets/book-6.jpeg" alt="" class="book__img" />
+                </figure>
+                <div class="book__title">The 5 Second Rule</div>
+                <div class="book__ratings">
+                  <i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star-half-stroke"></i>
+                </div>
+                <div class="book__price">
+                  <span class="book__price--normal">$49.95</span> $32.95
+                </div>
+              </div>
+              <div class="book">
+                <figure class="book__img--wrapper">
+                  <img src="./assets/book-7.jpg" alt="" class="book__img" />
+                </figure>
+                <div class="book__title">Your Next Five Moves</div>
+                <div class="book__ratings">
+                  <i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star-half-stroke"></i>
+                </div>
+                <div class="book__price">$28.95</div>
+              </div>
+              <div class="book">
+                <figure class="book__img--wrapper">
+                  <img src="./assets/book-8.jpeg" alt="" class="book__img" />
+                </figure>
+                <div class="book__title">Mastery</div>
+                <div class="book__ratings">
+                  <i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star-half-stroke"></i>
+                </div>
+                <div class="book__price">$43.95</div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
