--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       src="https://kit.fontawesome.com/cdb8c29462.js"
       crossorigin="anonymous"
     ></script>
+    <script src="index.js"></script>
   </head>
 
   <body>
@@ -23,8 +24,28 @@
               <a href="#features" class="nav__link nav__link--primary">Books</a>
             </li>
           </ul>
+          <button class="btn__menu" onclick="openMenu()">
+            <i class="fa-solid fa-bars"></i>
+          </button>
+          <div class="menu__backdrop">
+            <button class="btn__menu btn__menu--close" onclick="closeMenu()">
+              <i class="fa-solid fa-xmark"></i>
+            </button>
+            <ul class="menu__links">
+              <li class="menu__list">
+                <a href="#" class="menu__link" onclick="closeMenu()"> Home</a>
+              </li>
+              <li class="menu__list">
+                <a href="#features" class="menu__link" onclick="closeMenu()">Books</a>
+              </li>
+              <li class="menu__list">
+                <a href="" class="menu__link no__cursor" onclick="closeMenu()"> Contact</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </nav>
+
       <header>
         <div class="header__container">
           <div class="header__description">
