--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="highlight__img">
                   <i class="fa-solid fa-tags"></i>
                 </div>
-                <h3 class="highlight__subtitle">Easy and Quick</h3>
+                <h3 class="highlight__subtitle">Great Deals</h3>
                 <p class="highlight__para">
                   Get your hands on popular books for as little as $10.
                 </p>
